tests/good/for/for.go
package main;
import "fmt";

func main(){
	for false {fmt.Print(true)}
}

/*
== Expected program output ==
*/