tests/bad/fmt/fmt_print_input_type.go
package main;
import "fmt"

func main () {
		fmt.Print(true)
	}

/*
== Expected compiler output ==

*/
